src/test/deca/context/invalid/method_with_2_same_parameters_different_type.deca
/*
    Description : Test sur la gestion de l'utilisation du meme parametre en double

    Resultat : Erreur contextuelle (regle 3.12, deca:7:18)
*/
class X{

}
class Y{

}
class A{
    void x(X y, Y y){}
}
// @expected_output deca:7:18
